@@ -8,14 +8,15 @@ public class Main {
         List<String> names = Arrays.asList("Jack", "Connor", "Harry", "George", "Samuel", "John");
         List<String> families = Arrays.asList("Evans", "Young", "Harris", "Wilson", "Davies", "Adamson", "Brown");
         Collection<Person> persons = new ArrayList<>();
+        Random random = new Random();
 
         for (int i = 0; i < 10_000_000; i++) {
             persons.add(new Person(
-                    names.get(new Random().nextInt(names.size())),
-                    families.get(new Random().nextInt(families.size())),
-                    new Random().nextInt(100),
-                    Sex.values()[new Random().nextInt(Sex.values().length)],
-                    Education.values()[new Random().nextInt(Education.values().length)])
+                    names.get(random.nextInt(names.size())),
+                    families.get(random.nextInt(families.size())),
+                    random.nextInt(100),
+                    Sex.values()[random.nextInt(Sex.values().length)],
+                    Education.values()[random.nextInt(Education.values().length)])
             );
         }
 
@@ -23,7 +24,6 @@ public class Main {
         long minorsCount = persons.stream()
                 .filter(person -> person.getAge() < 18)
                 .count();
-
         System.out.println("Количество несовершеннолетних: " + minorsCount);
 
         // 2. Получить список фамилий призывников (т.е. мужчин от 18 и до 27 лет).
@@ -31,8 +31,7 @@ public class Main {
                 .filter(person -> person.getSex() == Sex.MAN
                 && person.getAge() >= 18 && person.getAge() <= 27)
                 .map(Person :: getFamily)
-                .collect(Collectors.toList());
-
+                .toList();
         System.out.println("Список фамилий призывников: " + conscripts);
 
         // 3. Получить отсортированный по фамилии список потенциально работоспособных людей
@@ -43,8 +42,7 @@ public class Main {
                 .filter(person -> (person.getSex() == Sex.WOMAN && person.getAge() >= 18 && person.getAge() <= 60) ||
                         (person.getSex() == Sex.MAN && person.getAge() >= 18 && person.getAge() <= 65))
                 .sorted(Comparator.comparing(Person::getFamily))
-                .collect(Collectors.toList());
-
+                .toList();
         System.out.println("Список потенциально работоспособных людей с высшим образованием: " + employedPeople);
     }
 }
